# Codex-Second-Brain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  capability-contract.json  pyproject.toml
.github/workflows/: ci.yml
codex_second_brain/: __init__.py  cli.py  hardening.py
demo-vault/: CRITICAL_FACTS.md  Home.md  README.md  _CLAUDE.md  index.md
demo-vault/Dev Logs/: 2026-07-08 - Demo Adaptive Routing Cases.md  2026-07-08 - Demo Screenshot Conversion.md
demo-vault/Knowledge/Examples/: 2026-07-08 - Image to Markdown Workflow.md  2026-07-08 - Meeting to Execution Memory.md  2026-07-08 - Repeated Debugging Route Learning.md  2026-07-08 - Tool Overload Auto Router.md
demo-vault/Logs/: 2026-07-08.md
demo-vault/fixtures/: capture-events.jsonl  memory-graph.jsonl  momo-route-result.json  retrieval-cases.json
docs/: architecture.md  dry-run-automation.md  health-hardening.md  momo-tools-integration.md  schemas.md
schemas/: capture-event.schema.json  memory-edge.schema.json  vault-index.schema.json
system/: AGENTS.example.md  README.md  capture-routing.md  memory-graph.md  weekly-consolidation.md
system/.codex/commands/: README.md
tests/: test_capability_contract.py  test_cli.py  test_hardening.py
tests/fixtures/golden/: consolidate-demo-vault.json
