[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-second-brain"
version = "0.2.0"
description = "Adaptive route memory and dry-run-first second-brain workflows for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Codex Second Brain contributors" }
]
keywords = ["codex", "agents", "obsidian", "memory", "routing", "second-brain"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
second-brain = "codex_second_brain.cli:main"

[tool.setuptools.packages.find]
include = ["codex_second_brain*"]
